# OrbitPDF

./: Cargo.toml  build.rs  justfile
i18n/en/: orbit_pdf.ftl
resources/: com.github.alfasst.OrbitPDF.desktop  com.github.alfasst.OrbitPDF.metainfo.xml
src/: app.rs  test_image.rs
