[package]
name = "orbit-pdf"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A PDF viewer for Pop!_OS COSMIC DE"
repository = "https://github.com/alfasst/OrbitPDF"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
pdfium-render = { version = "0.8.37", features = ["thread_safe", "image"] }
rfd = { version = "0.17.2" }
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[package.metadata.deb]
maintainer = "Alfasst <alfasst@example.com>"
depends = "$auto"
extended-description = "A PDF viewer for Pop!_OS COSMIC DE"
section = "utils"
priority = "optional"
assets = [
    ["target/release/orbit-pdf", "usr/bin/", "755"],
    ["resources/com.github.alfasst.OrbitPDF.desktop", "usr/share/applications/", "644"],
    ["resources/com.github.alfasst.OrbitPDF.metainfo.xml", "usr/share/metainfo/", "644"],
    ["resources/icons/hicolor/scalable/apps/icon.svg", "usr/share/icons/hicolor/scalable/apps/com.github.alfasst.OrbitPDF.svg", "644"]
]
